# bip

./: .codacy.yml  .codeclimate.yml  .deepsource.toml  .dockerignore  .editorconfig  .flaskenv  .gitignore  .pylintrc  .travis.yml  Dockerfile  MANIFEST.in  README.md  README.rst  build_image.sh  setup.cfg  setup.py
.github/workflows/: CI.yml  release.yml  tests.yml
conf/: bip.docker.conf  bip.gunicorn.conf  bip.gunicorn.service  bip.ini  bip.service  bip.uwsgi.conf  bip.uwsgi.service  environment  secrets.py.example  site.json.example  site.schema.json
dockerfiles/: Dockerfile.postgres  Dockerfile.simple  README.md
docs/: adminguide.rst  apidocs.rst  bipadmin.rst  coc.rst  conf.py  contributing.rst  devguide.rst  index.rst  install.rst  license.rst  roadmap.rst  thirdparty.rst  userguide.rst
docs/api/: bip.admin.rst  bip.auth.rst  bip.cli.attachments.rst  bip.cli.database.rst  bip.cli.pages.rst  bip.cli.rst  bip.cli.users.rst  bip.main.rst  bip.rst  bip.user.rst  bip.utils.rst  modules.rst
requirements/: base.txt  dev.txt  prod.txt  test.txt
scripts/: build_image.sh  build_nginx.sh  docker_entrypoint.sh  docker_install_app.sh  docker_install_app_postgres.sh  docker_install_build_packages.sh  docker_install_packages.sh  docker_install_runtime_packages.sh  docker_setup_env.sh
src/bip/: __init__.py  __version__.py  _version.py  app.py  cli.py  config.py  config_test.py  data.py  display.py  ext.py  menu.py  models.py  search.py  security.py  signals.py  tasks.py  wsgi.py
tests/: __init__.py  conftest.py  factories.py  test_auth_views.py  test_cli.py
(+120 files in other folders)
