[aliases]
test = pytest

[metadata]
license_files = 
    LICENSE.txt

[tool:pytest]
norecursedirs = .* *.egg* build dist docs conf

[coverage:run]
omit =
    docs/*
    tests/*
    conf/*

[tool:isort]
multi_line_output = 5
include_trailing_comma = true
combine_as_imports = true
line_length = 88

[flake8]
max-line-length = 88
