[metadata]
license_files = 
    LICENSE

[tool:pytest]
norecursedirs = .* *.egg* build dist docs conf

[coverage:run]
omit =
    docs/*
    tests/*
    conf/*
    src/bip/wsgi.py
    src/bip/app.py
    src/bip/utils/templates.py

[isort]
multi_line_output = 5
include_trailing_comma = true
combine_as_imports = true
line_length = 88

[flake8]
max-line-length = 88
